syntax = "proto3";

package se.transport;

// A transport request frame.
message Request {
  // The correlation ID of the request.  The server is expected to send a response with the same ID.
  bytes id = 1;
  // The request data payload.
  bytes data = 2;
  // The RPC service being called.  Only set for transports that can't communicate this information
  // out-of-band.
  string service_name = 3;
  // The RPC method being called.  Only set for transports that can't communicate this information
  // out-of-band.
  string method_name = 4;
}

// A transport response frame.
message Response {
  // The correlation ID of the response.  This response is to the request with the matching ID.
  bytes id = 1;
  // The response data payload.
  bytes data = 2;
  ErrorCode error_code = 3;
  Error error = 4;

  enum ErrorCode {
    UNKNOWN = 0;
    NONE = 1;
    SERVICE_NOT_FOUND = 2;
    METHOD_NOT_FOUND = 3;
    RUNTIME = 4;
    BAD_REQUEST = 5;
  }

  message Error {
    string message = 1;
    Error cause = 2;
    repeated string backtrace = 3;
  }
}
